# ya-arch-sprint-2-project

./: .editorconfig  .gitignore  .kube-linter.yaml  .pre-commit-config.yaml  README.md
1-base/: README.md  compose.yaml
1-base/docker/: api.compose.yaml  compose.yaml  mongodb.compose.yaml
1-base/scripts/: mongodb-init.sh
2-sharding/: README.md
2-sharding-repl/: README.md  compose.yaml
2-sharding-repl/docker/: api.override.yaml  mongodb.compose.yaml
2-sharding-repl/scripts/: mongodb-init.sh
2-sharding/docker/: compose.yaml  mongodb.compose.yaml
2-sharding/scripts/: mongodb-init.sh
3-sharding-repl/: README.md
3-sharding-repl-cache/: README.md  compose.yaml
3-sharding-repl-cache/docker/: api.override.yaml  compose.yaml  mongodb.override.yaml  (+1 more)
4-api-gateway/: README.md  compose.yaml
4-sharding-repl-cache/: README.md
5-api-gateway/: README.md
5-k8s/: README.md  compose.yaml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  distroless.Dockerfile  justfile  pyproject.toml  ruff.toml  tox.ini
api/api/: __init__.py  app.py  config.py  factory.py  models.py  routes.py  utils.py
api/api/utils/: fastapi.py  healthcheck.py
api/chart/: Chart.yaml  README.md  values.yaml
api/chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  external-secret.yaml  hpa.yaml  ingress.yaml  knative-service.yaml  network-policy.yaml  pdb.yaml  secret-store.yaml  secret.yaml  service-account.yaml  service.yaml
api/chart/templates/tests/: test-connection.yaml
base/: README.md  compose.yaml
sharding/: README.md
sharding-repl/: README.md
(+47 files in other folders)
