[project]
name = "ya-arch-sprint-2-project-api"
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.12"

dependencies = [
    "fastapi-cache2>=0.2.2",
    "fastapi>=0.115.6",
    "logmiddleware>=0.0.4",
    "motor>=3.6.0",
    "pydantic-settings>=2.7.0",
    "redis[hiredis]>=5.2.1",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "cashews>=7.4.0",
    "async-timeout>=5.0.1",
]


[tool.uv]
dev-dependencies = [
    "commitizen>=3.29.0",
    "icecream>=2.1.3",
    "mypy[reports]>=1.11.2",
    "ruff>=0.6.5",
    "vulture>=2.11",
    "wemake-python-styleguide>=1.0.0",
]


[tool.mypy]
plugins = ["pydantic.mypy"]
# Import discovery
ignore_missing_imports = true
# Untyped definitions and calls
disallow_untyped_defs = true
check_untyped_defs = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
# Miscellaneous strictness flags
allow_redefinition = true
disable_error_code = ["index", "assignment", "call-overload"]
# Miscellaneous
scripts_are_modules = true

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true

[tool.vulture]
paths = ["api"]
min_confidence = 70
sort_by_size = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true


[tool.hatch.build.targets.wheel]
packages = ["api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
